--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
   </build>
     <distributionManagement>
   <repository>
-  <id>mvnTest</id>
-  <url>http://localhost:8081/repository/simple_jp/</url>
+  <id>simple-java</id>
+  <url>http://34.93.60.168:8081/repository/simple-java/</url>
   </repository>
     </distributionManagement>
 </project>
